results/SVCOMP/0-shot/log-assert4-2024_03_18_23_17_53.txt
class assert4 {
  //@ requires true;
  //@ ensures \result == (i >= 10 && i >= 20) ? 1 : (i >= 10 && i < 20) ? 0 : -1;
  public static int func(int i) {
    if (i >= 10)
      return (i >= 20) ? 1 : 0;
    else
      return -1;
  }
}
/home/max/Documents/JMLGPT/tmp/assert4.java:3: error: incomparable types: int and boolean
  //@ ensures \result == (i >= 10 && i >= 20) ? 1 : (i >= 10 && i < 20) ? 0 : -1;
                      ^
/home/max/Documents/JMLGPT/tmp/assert4.java:3: error: incompatible types: int cannot be converted to boolean
  //@ ensures \result == (i >= 10 && i >= 20) ? 1 : (i >= 10 && i < 20) ? 0 : -1;
                                              ^
2 errors

